--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
 }
 header img {
   width: 70px; height: 70px; border-radius: 50%;
-  margin-bottom: 10px; border: 2px solid var(--accent); background: #fff;
+  margin-bottom: 10px; border: 2px solid var(--accent); ;
 }
 header h1 {
   font-family: 'Playfair Display', serif;
