--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ header {
   border-bottom: 3px solid var(--accent);
 }
 header img {
-  width: 70px; height: 70px; border-radius: 50%;
-  margin-bottom: 10px; border: 2px solid var(--accent); ;
+  width: 160px; 
+  height: 160px;
+  margin-bottom: 10px;;
 }
 header h1 {
   font-family: 'Playfair Display', serif;
